5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_579.log
== TEST (2019-04-14 12:43:05) 
-- CODE:
print ("A UFAM tem", 2016 -1909, "anos de fundação."
-- ERROR:
File "XXXX", line 2
    
                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:43:42) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundação.")
-- OUTPUT:
A UFAM tem 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:45:00) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:45:19) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.135696
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
